<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="shapeshifter_title">ShapeShifter</string>
    <string name="shapeshiftos_title">ShapeShiftOS Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure look &amp; feel of recent apps view</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title">Weather options</string>
    <string name="lockscreen_weather_summary">Configure lockscreen weather</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="notification_headers_section_title">Notification headers</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to ShapeShiftOS</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dummy_string"> </string>
    <string name="active_edge_title">Active Edge</string>
    <string name="ambient_music_display">Music ticker</string>
    <string name="aware_settings_title">Motion Sense</string>
    <string name="battery_style_statusbar">Statusbar battery</string>
    <string name="battery_style_qs">Quick panel battery</string>
    <string name="brightness_control_category">Brightness control</string>
    <string name="custom_header_title">Custom header</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_battery_title">Battery LED</string>
    <string name="lockscreen_visualizer_enable">Music Visualizer</string>
    <string name="qs_panel_layout_category">QS panel layout</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="power_menu_category">Power menu</string>
    <string name="pulse_settings">Pulse</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="lockscreen_fod_category">Fingerprint On Display</string>
    <string name="shapeshiftos_version">ShapeShiftOS version</string>
    <string name="shapeshiftos_version_default">Unknown</string>
    <string name="shapeshiftos_about_title">About ShapeShiftOS</string>
    <string name="shapeshiftos_about_summary">A little info about the team</string>
    <string name="shapeshiftos_telegram_title">ShapeShiftOS Telegram Community</string>
    <string name="shapeshiftos_telegram_summary"><a href="https://t.me/s/shapeshiftos">Join our wonderful community here!</a></string>
    <string name="shapeshiftos_github_title">ShapeShiftOS Github</string>
    <string name="shapeshiftos_github_summary"><a href="https://www.github.com/ShapeShiftOS">See the ShapeShiftOS source code here!</a></string>
    <string name="shapeshiftos_about_info_summary">ShapeShiftOS is a new custom ROM that aims to offer a clean experience. We are an AOSP based custom ROM, twisted with the latest features from all over the Android development community. Quality and stability is our first priority as we are dedicated to bringing you the very best that Android has to offer.</string>
    <string name="shapeshiftos_about_team">ShapeShiftOS team</string>
    <string name="shapeshiftos_about_ashutosh" translatable="false">AshutoshSundresh (surfaceflinger)</string>
    <string name="shapeshiftos_about_ashutosh_summary" translatable="false">Lead Developer</string>
    <string name="shapeshiftos_about_mezz" translatable="false">MezzLasha</string>
    <string name="shapeshiftos_about_mezz_summary" translatable="false">Designer</string>
    <string name="shapeshiftos_about_san" translatable="false">san9scurtu</string>
    <string name="shapeshiftos_about_san_summary" translatable="false">Developer</string>
    <string name="about_maintainer">Maintainer</string>
    <string name="shapeshiftos_about_maintainer">The maintainer for your device is</string>
    <string name="shapeshiftos_about_maintainer_summary" translatable="false">Too lazy to fill this up</string>
    <string name="advanced_behavior_title">Advanced behavior</string>
    <string name="appearance_category">APPEARANCE</string>
    <string name="behavior_category">BEHAVIOR</string>
    <string name="enable_first">Please enable first</string>
    <string name="unit_seconds">Second(s)</string>
    <string name="ok_string">Ok</string>
    <string name="default_string">Default</string>
    <string name="unsupported_gestures">Enable two button or three button navigation to use this feature</string>
    <string name="unsupported_navigation_bar">Enable gesture navigation to use this feature</string>
    <string name="unsupported_feature_summary">This feature is unsupported by your device</string>
    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
    <string name="systemui_restart_toast">This feature requires a SystemUI restart to be applied. We\'ll restart the SystemUI right now.</string>
    <string name="navigation_tuner_title">Navigation Tuner</string>
    <string name="navigation_tuner_summary">Further adjust some elements of system navigation</string>
    <string name="navbar_gestures_title">Navigation gesture options</string>
    <string name="navbar_gestures_summary">Choose buttons or gestures to navigate your device</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="gesture_invert_layout_summary">Inverts the layout of the IME switcher</string>
    <string name="pixel_navbar_anim_title">Pixel animation</string>
    <string name="pixel_navbar_anim_summary">Toggle home button animation</string>
    <string name="qs_tiles_title">Quicksettings tiles</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="qs_tile_title_visibility_summary">Show a label under each quicksettings title</string>
    <string name="notification_headers_title">Notification Headers</string>
    <string name="notification_headers_summary">Show headers in the notification shade\nRequires a SystemUI restart</string>
    <string name="center_notification_headers_title">Center notification headers</string>
    <string name="center_notification_headers_summary">Whether to Center notification headers (Requires a SystemUI restart)</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_date_summary">Customize your statusbar clock and date</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="statusbar_title">Icons</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
</resources>