<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Nitrogen Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.extra.settings.preferences.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />
     
    <PreferenceCategory
        android:title="@string/status_bar_clock_title">

        <com.extra.settings.preferences.SystemSettingSwitchPreference
            android:key="statusbar_clock"
            android:title="@string/status_bar_clock_show"
            android:defaultValue="true" />

        <com.extra.settings.preferences.SystemSettingSwitchPreference
            android:key="statusbar_clock_seconds"
            android:title="@string/clock_seconds_display"
            android:dependency="statusbar_clock"
            android:defaultValue="false" />
    </PreferenceCategory>
    
	<PreferenceCategory
            android:title="@string/statusbar_icon">
	    <com.extra.settings.preferences.SystemSettingSwitchPreference
        	android:key="show_volte"
        	android:title="@string/volte_switch_title"
        	android:summary="@string/volte_switch_summary"
        	android:defaultValue="true" />
        
	    <com.android.settings.custom.preference.SystemSettingListPreference
         	android:key="volte_icon_style"
         	android:title="@string/volte_icon_style_title"
         	android:entries="@array/volte_icon_type_entries"
         	android:entryValues="@array/volte_icon_type_values"
         	android:summary="%s"
		    android:defaultValue="0"/>
        
	</PreferenceCategory>

    <com.android.settings.widget.CardPreference
        android:key="traffic_category"
        android:fragment="com.extra.settings.fragments.TrafficIndicators"
        android:icon="@drawable/ic_settings_statusbar"
        android:title="@string/traffic_title"
        android:summary="@string/traffic_summary" />
        
</PreferenceScreen>
